--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,13 @@ jobs:
       uses: actions/checkout@v2
       with:
         persist-credentials: false
-
+    - name: Install SSH Client
+      uses: webfactory/ssh-agent@v0.2.0
+      with:
+        ssh-private-key: ${{ secrets.DEPLOY_KEY }}
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        ACCESS_TOKEN: ${{ secrets.FRANKLIN }}
+        SSH: true
         BRANCH: gh-pages
         FOLDER: __site
