--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       uses: julia-actions/setup-julia@v1
       with:
         version: 1.3.0
-    - run: julia -e 'using Franklin; optimize()'
+    - run: julia -e 'using Pkg; Pkg.add("Franklin"); using Franklin; optimize()'
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
