--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
         persist-credentials: false
     - name: Install SSH Client
       uses: webfactory/ssh-agent@v0.2.0
+      env:
+        key: ACTIONS_ALLOW_UNSECURE_COMMANDS=true
       with:
         ssh-private-key: ${{ secrets.DEPLOY_KEY }}
     - name: Install Julia
